# xyo-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  SPEC.md  build.sh  gmon.out  scratch_llvm_vm_spec.md
.github/workflows/: ci.yml  pages.yml
cmake/: Emscripten.cmake
include/sjit/: abi.hpp  compiler.hpp  host_app.hpp  jit.hpp  project_loader.hpp  skia_pen_layer.hpp
quickjs_subset/: sjit_quickjs_string.c  sjit_quickjs_string.h
runtime/: sjit_abi.h  sjit_clone.c  sjit_clone.h  sjit_compare.c  sjit_compare.h  sjit_config.h  sjit_control.c  sjit_control.h  sjit_data.c  sjit_data.h  sjit_draw.c  sjit_draw.h  sjit_event.c  sjit_event.h  sjit_frame.c  sjit_frame.h  sjit_host_api.c  sjit_host_api.h  sjit_jit_bridge.c  sjit_jit_bridge.h  sjit_list.c  sjit_list.h  sjit_list_internal.h  sjit_looks.c  sjit_looks.h  sjit_motion.c  sjit_motion.h  sjit_number.c  sjit_number.h  sjit_opcode_effects.c  sjit_opcode_effects.h  sjit_operator.c  sjit_operator.h  sjit_ownership.c  sjit_ownership.h  sjit_ownership_internal.h  sjit_pen.c  sjit_pen.h  sjit_runtime.c  sjit_runtime.h  (+23 more)
scripts/: build-web-llvm.sh  build-web.sh
src/: compiler.cpp  host_app.cpp  jit.cpp  main.cpp  project_loader.cpp  skia_pen_layer.cpp  web_jit_bridge.cpp  web_jit_bridge.h  web_jit_stub.cpp  web_main.cpp
tests/unit/: runtime_tests.cpp  skia_pen_layer_tests.cpp
web/: app.js  index.html  styles.css
